--- a/views/contact.html
+++ b/views/contact.html
@@ -63,16 +63,16 @@ toggle between hiding and showing the dropdown content */
 </p>
     </div>
 <div class="mail">
-  <p> <span class=hr8> <a href="mailto:pajsen@icloud.com" style="color: #708090" target="_blank"> pajsen@icloud.com </a> </span>
+  <p> <span class="hr8"> <a href="mailto:pajsen@icloud.com" style="color: #708090" target="_blank"> pajsen@icloud.com </a> </span> </p>
 
 </div>
-
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdNRLV1HZFQMDl5EBp2mArRQSHmKu0f8iLvXSV_GLo__sJb6A/viewform?embedded=true" width="640" height="640" frameborder="0" marginheight="0" marginwidth="0">Läser in …</iframe>
     <div class="Info">
 
 <tr>
         <table>
 <h4> How to get a faster response:</h4>
-<h4>Please include the following points to increase the chance of me saying yes
+          <h4>Please include the following points to increase the chance of me saying yes </h4>
 <h4>1. Include a short project description and name in the subject. </h4>
 <h4>2. Include the team's emails and what they are responsible for in the mail so I can contact them if I need anything </h4>
 <h4>3. Include the company name in the subject </h4>
@@ -82,14 +82,39 @@ toggle between hiding and showing the dropdown content */
 <h4>7. Include a link to the platform where you chat and give out the jobs, like slack, discord or monday</h4>
 <h4>8. Include what languages you are going to work in (even if i'm not going to work with some of them) </h4>
 <h4>9. Tell me what code editor you are using </h4>
-<h4>10. Include the HR and CEO/project manager's email </h4> </pre>
+<h4>10. Include the HR and CEO/project manager's email </h4>
 <h4>11.Include if you're a team or a company  </h4>
 
 
         </table>
 </tr>
-
-<tr>
+    </div>
+    
+    
+    <div class="bottom">
+          <script>
+    function getURL() {
+    document.write(window.location.href);
+    }
+    </script>
+     
+    <button type="button" class="myButton" onclick="getURL();">Where am I?</button>
+    </div>
+    
+    <div id="rectangle" style="width:1000000 px; height:10 px; background-color: black;">
+    <div class="bottom-strip">
+        <div class="wrapper">
+            <div class="notice">Copyright © 2020 Pajsen, Pajsen Media, ACF Coding. All Rights Reserved.</div>
+            <div class="social-media">
+                <em>Share This:</em>
+                <a  href="https://facebook.com/sharer.php?u=https://www.tutorialrepublic.com%2Ffaq%2Fhow-to-get-the-current-url-with-javascript.php" onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=300,width=600,top=150, left='+((screen.width/2)-300));return false;" title="Facebook"><i class="icon-facebook"></i></a>
+                <a href="https://twitter.com/share?text=How to Get the Current URL with JavaScript- &amp;url=https://www.tutorialrepublic.com%2Ffaq%2Fhow-to-get-the-current-url-with-javascript.php" id="tweet-btn" onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=300,width=600,top=150, left='+((screen.width/2)-300));return false;" title="Twitter"><i class="icon-twitter"></i></a>
+                <a href="https://mail.google.com/mail/?view=cm&amp;fs=1&amp;su=How to Get the Current URL with JavaScript&amp;body=https://www.tutorialrepublic.com%2Ffaq%2Fhow-to-get-the-current-url-with-javascript.php" id="email-btn" onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=300,width=600,top=150, left='+((screen.width/2)-300));return false;" rel="noreferrer" title="Gmail"><i class="icon-mail"></i></a>
+            </div>
+        </div>            
+    </div>
+      </div>
+    
 </head>
 </html>
 
