--- a/views/index.html
+++ b/views/index.html
@@ -2,14 +2,17 @@
 <html>
   <head>
 <link rel="icon" href="https://cdn.glitch.com/806c4b29-17a4-4de5-a660-fd1052b17ca6%2FUntitled.png?v=1590743469118">
-    <title>C :\>root/pajsen/portfoilio</title>
+    <title>C: ~\root/pajsen/portfoilio</title>
+        <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
+<h1>
+  The website is under going a redesign. Everyting might not be up to date. Check back soon for the new design
+    </h1>
   
 
 <!DOCTYPE html>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="google-site-verification" content="mN0DemTmB7oP4qEmGZVtM1EhSksHRT1tX_oBZmr7E1M" />
 <body>
-    <title>C :\>root/pajsen/portfoilio</title>
 
 
 <div class="dropdown">
@@ -24,27 +27,7 @@
   </div>
 </div>
 
-<script>
-/* When the user clicks on the button, 
-toggle between hiding and showing the dropdown content */
-function myFunction() {
-  document.getElementById("myDropdown").classList.toggle("show");
-}
-
-// Close the dropdown if the user clicks outside of it
-window.onclick = function(event) {
-  if (!event.target.matches('.dropbtn')) {
-    var dropdowns = document.getElementsByClassName("dropdown-content");
-    var i;
-    for (i = 0; i < dropdowns.length; i++) {
-      var openDropdown = dropdowns[i];
-      if (openDropdown.classList.contains('show')) {
-        openDropdown.classList.remove('show');
-      }
-    }
-  }
-}
-</script>
+<script src="drop.js"></script>
   </body>
 
 
@@ -53,16 +36,15 @@ window.onclick = function(event) {
   <div class="textmain">
     <h3>Pajsen's Portfolio</h3>
   <br> 
+    
   <p class="blink_me">About me:</p>
   <br> 
   <div class="start">
-  <p> <span class=hr3>Hi!</span>
-    <p> <span class=hr4>I'm</span>
-    <p> <span class=hr5>known</span>
-    <p> <span class=hr6>as</span>
-    <p> <span class=hr7>Pajsen</span>
-</div>
-    </head>
+    <p> <span class="hr3">Hi!</span> </p>
+    <p> <span class="hr4">I'm</span> </p>
+    <p> <span class="hr5">known</span> </p>
+    <p> <span class="hr6">as</span> </p>
+    <p> <span class="hr7">Pajsen</span> </p>
   I'm a developer, music artist, web developer and game developer.
   I'm the founder of Pajsen Media and Benitorex. 
   <br>My main programming languages are C#, HTML, CSS, Javascript, Java, Swift. OBJ C, Kojo and Python
@@ -71,8 +53,9 @@ window.onclick = function(event) {
   <br>This is my personal website and portfolio. 
   <br>
   <br>Wanna know more or hire me, then see the info at <a href="/contact" style="color: #2ab7ca">the contact page</a>
-    <br> </p>
+    <br> 
       </div>
+    </head>
 
 
 
@@ -91,7 +74,7 @@ window.onclick = function(event) {
     <td>1</td>
 
 
-    <td><span title="Console.log Website"><a href="https://pajsen-portfolio.glitch.me/" style="color: #cc0000">Console.log Website</a></td>
+  <td><span title="Console.log Website"><a href="https://pajsen-portfolio.glitch.me/" style="color: #cc0000">Console.log Website</a> </span></td>
   <td>Public beta: 4.5</td>
 
 
@@ -145,13 +128,13 @@ window.onclick = function(event) {
 
   <tr>
     <td>9</td>
-    <td><span title="BaseHighEncryptorDescyptor">BHED</td>
+    <td><span title="BaseHighEncryptorDescyptor">BHED</span></td>
     <td> 1.92 </td>
 
   </tr>
   <tr>
     <td>10</td>
-    <td><span title=" SeeME the scanner for blind or visueled imperd"><a href="/software/seeme.html" style="color: #cc0000">SeeME The Mobile App</a></td>
+    <td><span title=" SeeME the scanner for blind or visueled imperd"><a href="/software/seeme.html" style="color: #cc0000">SeeME The Mobile App</a></span></td>
     <td>5.0</td>
 
   </tr>
@@ -174,12 +157,10 @@ function log () {
     </script> --->
 
     
-  </div>
 
 
     </p>  
-  </div>
-  </p>
+ 
 
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -193,23 +174,6 @@ p {
 </style>
 
 
-<body onload="autoNotify()"> <!--Play the audio file on pageload  -->
-
-  <!---<audio id="notifypop"> <!--Source the audio file. -->
-<source src="https://cdn.glitch.com/806c4b29-17a4-4de5-a660-fd1052b17ca6%2FThe%20Purge%20Siren%20For%205%20Minutes.mp3?v=1589357759897" type="audio/mp3"></audio>
-
-<!-- End Google Analytics -->
 
 
-<!-- Smartsupp Live Chat script -->
-<!--<script type="text/javascript">
-var _smartsupp = _smartsupp || {};
-_smartsupp.key = 'd8a9437da802c75b2945151b71b6ed4bb4166355';
-window.smartsupp||(function(d) {
-  var s,c,o=smartsupp=function(){ o._.push(arguments)};o._=[];
-  s=d.getElementsByTagName('script')[0];c=d.createElement('script');
-  c.type='text/javascript';c.charset='utf-8';c.async=true;
-  c.src='https://www.smartsuppchat.com/loader.js?';s.parentNode.insertBefore(c,s);
-})(document);-->
-
-<script> console.log("Hello World, this is a test") </script>
+</html>
